Document ZGC default in Java profile